# program_bazodanowy_studentow_pracownikow

./: CMakeLists.txt  README.md  diagram_klas.cd  glowny.cpp  lista.txt  menu.cpp  menu.h  obiekty.cpp  obiekty.h  zapis_odczyt.cpp  zapis_odczyt.h
